# circuit-simulator

./: CMakeLists.txt  LICENCE  README.md
data/: c1.csim
src/: battery.h  capacitor.h  circuit.h  components.h  ground.h  log.h  main.cpp  probe.h  resistor.h  simulator.h
test/: CMakeLists.txt  result_test.cpp
